# SIMServer

./: Server.sln  release.bat  release.ftp  使用说明.docx  省市列表.xls
Server/: .cproject  CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/3rd/: ReadMe.txt
Server/src/: CMakeLists.txt  GameConst.h  Main.cpp  ThreadTest.cpp  base.cpp  base.h  debug_log.cpp  debug_log.h  log_manager.h  log_wrap.h
Server/src/Network/: CircuitQueue.h  HttpHeader.cpp  HttpHeader.h  IoHandle.cpp  IoHandle.h  Network.cpp  Network.h  RecvBuf.h  SendBuf.h  Session.cpp  Session.h
Server/src/client/: ClientManager.cpp  ClientManager.h  ClientSocket.cpp  ClientSocket.h  HttpClient.cpp  HttpClient.h
Server/src/database/: DBTest - 副本.cpp  Database.cpp  Database.h  SQLRequest.cpp  SQLRequest.h  Table.h
Server/src/dbfile/: fatso.sql
Server/src/protocol/: ByteArray.cpp  ByteArray.h  Command.h  Copy2 4in1.bat  Copy2MJ.bat  Copy2Nomal.bat  Message.h  ResultCode.h
Server/src/utils/: base64.cpp  base64.h  date.cpp  date.h  timer.cpp  timer.h
