file(GLOB_RECURSE file_src *.cpp)
file(GLOB_RECURSE file_inc *.h)

SET(SOURCE_FILES ${file_src})
SET(HEADER_FILES ${file_inc})

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}
${PROJECT_SOURCE_DIR}/src
${PROJECT_SOURCE_DIR}/mysql/include
)

LINK_DIRECTORIES(
${PROJECT_SOURCE_DIR}/lib
${PROJECT_SOURCE_DIR}/mysql/lib
${PROJECT_SOURCE_DIR}/boost/lib
)

TARGET_LINK_LIBRARIES(server libmysql.lib)

ADD_EXECUTABLE(server ${file_src})

SET_TARGET_PROPERTIES(server PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")